se actualiza método newInstance()